--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="index, follow">
   <meta name="title" content="حُذيفة جابر">
-  <meta name="description" content="انا مطور مواقع (Full Stack web developer)">
+  <meta name="description" content="مطور مواقع (Full Stack web developer)">
   <!-- <link
     href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@300;400;500&family=Noto+Sans+Arabic:wght@300;400;500&family=Readex+Pro:wght@300;400;500&display=swap"
     rel="stylesheet"> -->
