--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLN8JCXBMV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-JLN8JCXBMV');
+  </script>
 </body>
 
 </html>
